--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app='LunchApp'>
+<html lang="en" ng-app="LunchApp">
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
     </style>
   </head>
 <body>
-   <div class="container" ng-controller='LunchController'>
+   <div class="container" ng-controller="LunchController">
      <h1>Lunch Checker</h1>
          <div class="form-group">
              <input id="lunch-menu" type="text" ng-model="dishes"
