--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html ng-app='LunchApp'>
   <head>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <script src="angular.min.js"></script>
-    <script src="app.js"/>
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
 <body>
-   <div ng-controller='LunchController' class="container">
+   <divng-controller='LunchController' class="container">
      <h1>Lunch Checker</h1>
          <div class="form-group">
              <input id="lunch-menu" type="text" ng-model="dishes"
