--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body>
    <div ng-controller='LunchController' class="container">
      <h1>Lunch Checker</h1>
-         <div class="form-group">
+         <div class="form-group" ng-class="inputClass">
              <input id="lunch-menu" type="text" ng-model="dishes"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control">
          </div>
+         <p class="text-info">I do NOT consider and empty item, i.e., , , as an item towards to the count which is {{dishesCount}}</p>
          <div class="form-group">
              <button ng-click="CheckDishes()" class="btn btn-default">Check If Too Much</button>
          </div>
